# create-dataset

./: README.md  dev_dependancies.txt  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: run_pytest.yml
examples/: cli_generate.py  generateqa.py
qageneratorllm/: __init__.py  generator.py  loader.py  qa_dataclass.py  utils.py
qageneratorllm/prompts/: qa_prompt.py
src/: __init__.py  chat_llm.py  generator.py  qa_dataclass.py  utils.py
src/prompts/: mcq_prompt.py  qa_prompt.py  qa_prompts.py
tests/: conftest.py  test_generator.py  test_qa_dataclass.py  test_utils.py
